<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">funinews</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="imagedec">图片描述</string>
    <string name="button_backname">返回</string>
    <string name="title_settingname">设置</string>
    <string name="title_aboutus">关于我们</string>
    <string name="verion">版本号:V2.0.1</string>
    <string name="updataverion">版本更新</string>
    <string name="help">帮助与反馈</string>
    <string name="prodcet">功能介绍</string>
    <string name="copyright">Copyright © 2009&#126;2014 Funi Corporation,All Rights Reserved</string>
    <string name="companyname">成都房联云码科技有限公司</string>
    <string name="copyrightInformation">服务条款</string>
    <string name="title_funntroduction">功能介绍</string>
    <string name="title_feedback">意见反馈</string>

</resources>