<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48.0dip"
        android:background="@drawable/mi_bottombg"
        android:gravity="center_vertical" >

        <TextView
            style="@style/SupportChangeFont"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:gravity="center"
            android:paddingLeft="96.0dip"
            android:paddingRight="96.0dip"
            android:shadowColor="@color/version_check_txt_shadowcolor"
            android:shadowDy="-1.0"
            android:shadowRadius="0.2"
            android:singleLine="true"
            android:text="@string/title_aboutus"
            android:textColor="@color/white"
            android:textSize="19.0sp" />

        <include layout="@layout/user_layout_btnback" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtverion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dip"
        android:drawablePadding="10dip"
        android:drawableTop="@drawable/company_log"
        android:gravity="center"
        android:text="@string/verion"
        android:textColor="#77787b"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/relativeAboutUs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/preference_top_item"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                style="@style/ListTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/updataverion" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeHelp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_center_item"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                style="@style/ListTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/prodcet" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/imagedec"
                android:scaleType="matrix"
                android:src="@drawable/open_arrow" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeVersionUpdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/preference_last_item"
            android:clickable="true"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/textNewVersion"
                style="@style/ListTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/help" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:contentDescription="@string/imagedec"
                android:scaleType="matrix"
                android:src="@drawable/open_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/copyrightInformation"
            android:textColor="#2a5caa"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/companyname"
            android:textColor="#77787b"
            android:textSize="@dimen/textsize_normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/copyright"
            android:textColor="#77787b"
            android:textSize="@dimen/textsize_normal" />
    </LinearLayout>

</LinearLayout>